2010-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert-color-overlay): Split stuff like
	"#444444 !important" to find the real colour.

2010-11-23  Andrew Cohen  <cohen@andy.bu.edu>

	* nnheader.el (nnheader-parse-head): Bug fix.  Properly position
	point when parsing headers.

	* nnspool.el (nnspool-insert-nov-head): Bug fix.  Make sure point
	is positioned properly when parsing headers.

2010-11-23  Julien Danjou  <julien@danjou.info>

	* color-lab.el (boundp): Bind float-pi for Emacs < 23.3.

	* shr-color.el (shr-color->hexadecimal): Add support for color names.

	* shr.el (shr-parse-style): Replace \n with space in style parsing.

	* shr-color.el (shr-color-hsl-to-rgb-fractions): Use shr-color-hue-to-rgb.
	(shr-color->hexadecimal): Call shr-color-hsl-to-rgb-fractions.

2010-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-color->hexadecimal): Autoload.
	(shr-descend): Add color to all tags.

2010-11-22  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-tag-color-check): Convert colors to hexadecimal with
	shr-color->hexadecimal.

	* shr-color.el (shr-color->hexadecimal): Add converting functions for
	RGB() or HSL() color representation.

	* shr.el (shr-tag-font): Add.
	(shr-tag-color-check): New function to get better colors.
	(shr-tag-insert-color-overlay): Factorize code between tag-font and
	tag-span.

	* shr-color.el: New file.

	* color-lab.el: New file.

	* gnus-art.el (gnus-url-mailto): Do not downcase args.

2010-11-21  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el: Fix typo in comments.
	(nnir-run-imap): Simplify code. No need to reverse artlist.
	(nnir-run-gmane): Use nnir-tmp-buffer for web results.

2010-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-server-show-server): New command and keystroke.

	* nnimap.el (nnimap-get-capabilities): Refactor out.
	(nnimap-open-connection): Re-request capabilities after STARTTLS.

2010-11-21  Ralf Angeli  <angeli@caeruleus.net>
